semantics/tests/parser/invalid/parse_invalid_octal_integer_with_leading_underscore.fpl
let octal = 0o_32_45